# mcmc-solid-state

./: .gitignore  CMakeLists.txt  README.md  SETUP.md  demo_ising_lattice.ipynb  requirements.txt  setup.py
LAMMPS/Graphene/: CRASH  README.md  catalysis_output.out  convert.in  data_converted.xyz  in.catalysis_11_r3  log.catalysis_11_r3  log.lammps  slurm-4084813.out
LAMMPS/MAC/: README.md  data.catalysis_11_r3  disordered_mac.in  log.lammps  submit.sh
UserSettings/Layouts/: default-2021.dwlt
data/: labeled_lattices.npz
lib/: montecarlo.cp312-win_amd64.pyd
src/cpp/bindings/: montecarlo_bindings.cpp
src/cpp/model/: HeisenbergModel.cpp  HeisenbergModel.h  IsingModel.cpp  IsingModel.h  Lattice.cpp  Lattice.h  MonteCarlo.cpp  MonteCarlo.h
src/python/analysis/: visualize_lattice.py
src/python/machine-learning/: data_generator.py  model_training.py
tests/python_tests/: montecarlo.cp312-win_amd64.pyd  test_isingmodel.py  test_montecarlo.py
